src/main/java/com/example/sos/employee/error/InvalidUploadFormatError.java
package com.example.sos.employee.error;

import com.example.sos.common.error.BaseError;

public class InvalidUploadFormatError extends BaseError {}
